# supply-chain-warehouse

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: sources.yaml
data/sample/: orders.csv  telemetry.csv
docs/: architecture.md
sql/ddl/: snowflake_starschema.sql
src/supply_chain_dw/: __init__.py  main.py
src/supply_chain_dw/config/: __init__.py  logging_config.py  settings.py
src/supply_chain_dw/extract/: __init__.py  mqtt_extractor.py  sap_hana_extractor.py  weather_api_extractor.py
src/supply_chain_dw/load/: __init__.py  snowflake_loader.py
src/supply_chain_dw/models/: __init__.py
src/supply_chain_dw/orchestration/: dag_factory.py
src/supply_chain_dw/transform/: __init__.py  forecasting.py  iot_processor.py  kpi_engine.py  scd2.py
tests/: test_iot.py  test_kpi_engine.py
