[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply_chain_dw"
version = "0.1.0"
description = "SAP/Oracle/MQTT into a Snowflake Kimball warehouse, with KPI and forecasting layers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "oracledb>=2.0.0",
    "snowflake-connector-python>=3.7.0",
    "snowflake-sqlalchemy>=1.5.0",
    "paho-mqtt>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "holidays>=0.45",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
    "faker>=24.0.0",
]
airflow = ["apache-airflow>=2.8.0"]

[project.scripts]
supply_chain_dw = "supply_chain_dw.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "C4"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
